create accounts dirs

--- a/play.yml
+++ b/play.yml
@@ -7,8 +7,8 @@
   roles:
     - role: .
       accounts:
-        - id: &id '{{ user | default(user) }}'
-          host: '{{ host | default(host) }}'
+        - id: &id '{{ user }}'
+          host: '{{ host }}'
           user: *id
-          maildir: '{{ maildir | default(maildir) }}'
-          patterns: '{{ patterns | default(patterns) }}'
+          maildir: '{{ maildir }}'
+          patterns: '{{ patterns }}'
